        including unnecessary parentheses will still (slightly) slow down
        evaluation.  (These unnecessary parentheses are preserved so that
        the expression will appear as written when deparsed.)
  \item ...
  \item Assignment to list elements, and other uses of the \code{$<-}
        operator, are now substantially faster.
}}

  \subsection{PERFORMANCE IMPROVEMENTS FROM A LATER R CORE RELEASE}{
    \itemize{
    \item A number of performance improvements relating to S3 and S4
          implementation, due to Tomas Kalibera, were incorporated from
          R 3.2.0.
}}

  \subsection{BUG FIXES}{
  \itemize{
  \item Fixed a bug in which pqR's optimization of updates such as 
        \code{a<-a+1} could sometimes permit modification of a locked binding.
  \item ...
  \item Fixed related problems with \code{apply}, \code{lapply}, \code{vapply},
        and \code{eapply}, that can show up when the value returned by the 
        function being applied is itself a function.  This problem also
        resulted in incorrect display of saved warning messages.  The problems
        are also fixed in R-3.2.0, in a different way.
  \item The \code{gctorture} function now works as documented, forcing
        a FULL garbage collection on every allocation.  This does make
        running with gctorture enabled even slower than before, when
        most garbage collections were partial, but is more likely to
        find problems.
  \item A large number of fixes were made that corrected possible problems,
        mostly with protection of pointers, most of them provided by Tomas 
        Kalibera as fixes to R Core versions (sometimes with adaptation 
        required for use in pqR).
}}

  \subsection{BUG FIXES CORRESPONDING TO THOSE IN LATER R CORE RELEASES}{
  \itemize{
  \item ...
  \item Removed incorrect information from \code{help(call)}, as also
        done in R-3.0.2.
}}
}


\section{CHANGES IN VERSION RELEASED 2014-11-16}{

  \subsection{INTRODUCTION}{
