@@ -8,3 +8,5 @@ since it gets silly maintaining the alternative (which is never tested).
 Got rid of conditional use of fast base cache lookup.
 
 Revised findFun and FINDFUN.
+
+Created and used integer_to_string function - sprintf seems very slow.
